--- a/src/themes/mirror.less
+++ b/src/themes/mirror.less
@@ -10,11 +10,11 @@ body {
     padding: 0;
 }
 
-html,
-body {
+.main-background {
+    position: fixed;
+    display: block;
 	background: var(--background-image) var(--background) !important;
 	background-size: cover !important;
-	background-attachment: fixed !important;
 }
 
 
